// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatentForm component 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-patent-information"
        id="standard-card-patent-information"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
              data-testid="standard-card-patent-information-header"
              id="standard-card-patent-information-header"
            >
              Patent information
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
          data-analyticsid="standard-card-patent-information-content"
          data-testid="standard-card-patent-information-content"
          id="standard-card-patent-information-content"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-2 css-z5z9i1-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
            >
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                data-testid="rek_title"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard MuiFormLabel-colorPrimary Mui-focused Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-standard css-c95u6h-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="true"
                  data-testid="rek_title-label"
                  for="rek_title-input"
                  id="rek_title-label"
                >
                  Title of patent
                  <span
                    aria-hidden="true"
                    class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-1v5bsei-MuiFormLabel-asterisk"
                  >
                     
                    *
                  </span>
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused MuiInputBase-formControl MuiInputBase-multiline css-glkc0l-MuiInputBase-root-MuiInput-root"
                >
                  <textarea
                    aria-invalid="false"
                    aria-label="Title of patent"
                    class="MuiInputBase-input MuiInput-input MuiInputBase-inputMultiline css-9j73qj-MuiInputBase-input-MuiInput-input"
                    data-analyticsid="rek_title-input"
                    data-testid="rek_title-input"
                    id="rek_title-input"
                    label="Title of patent"
                    name="rek_title"
                    required=""
                    rows="3"
                    style="height: 0px; overflow: hidden;"
                  />
                  <textarea
                    aria-hidden="true"
                    class="MuiInputBase-input MuiInput-input MuiInputBase-inputMultiline css-9j73qj-MuiInputBase-input-MuiInput-input"
                    readonly=""
                    style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding-top: 0px; padding-bottom: 0px; width: 100%;"
                    tabindex="-1"
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-6 css-b2h8ea-MuiGridLegacy-root"
            >
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                data-testid="fez_record_search_key_patent_number.rek_patent_number"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  data-testid="fez_record_search_key_patent_number.rek_patent_number-label"
                  for="fez_record_search_key_patent_number.rek_patent_number-input"
                  id="fez_record_search_key_patent_number.rek_patent_number-label"
                >
                  Patent number
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
                >
                  <input
                    aria-invalid="false"
                    aria-label="Patent number"
                    class="MuiInputBase-input MuiInput-input css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                    data-analyticsid="fez_record_search_key_patent_number.rek_patent_number-input"
                    data-testid="fez_record_search_key_patent_number.rek_patent_number-input"
                    id="fez_record_search_key_patent_number.rek_patent_number-input"
                    label="Patent number"
                    name="fez_record_search_key_patent_number.rek_patent_number"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-6 css-b2h8ea-MuiGridLegacy-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-jl57sx-MuiGrid-root"
                id="rek-date"
              >
                <div
                  class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-colorPrimary Mui-error Mui-required MuiInputLabel-root MuiInputLabel-animated MuiInputLabel-shrink css-1x4q2ok-MuiFormLabel-root-MuiInputLabel-root"
                    data-shrink="true"
                  >
                    Date patent issued
                    <span
                      aria-hidden="true"
                      class="MuiFormLabel-asterisk MuiInputLabel-asterisk Mui-error css-1v5bsei-MuiFormLabel-asterisk"
                    >
                       
                      *
                    </span>
                  </label>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-1mkgr8u-MuiGrid-root"
                    style="margin-top: -12px;"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-1ynczkt-MuiGrid-root"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                      >
                        <div
                          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
                        >
                          <input
                            aria-invalid="true"
                            class="MuiInputBase-input MuiInput-input css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                            data-analyticsid="rek-date-day-input"
                            data-testid="rek-date-day-input"
                            id="rek-date-day-input"
                            label="day"
                            maxlength="2"
                            name="day"
                            placeholder="Day"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <p
                        class="MuiFormHelperText-root Mui-error css-u90aml-MuiFormHelperText-root"
                      >
                        Year required
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-1ynczkt-MuiGrid-root"
                    >
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiSelect-root css-nbo6pz-MuiInputBase-root-MuiInput-root-MuiSelect-root"
                      >
                        <div
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-invalid="true"
                          aria-labelledby="rek-date-month-select"
                          class="MuiSelect-select MuiSelect-standard Mui-error MuiInputBase-input MuiInput-input css-unhb03-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                          data-analyticsid="rek-date-month-select"
                          data-testid="rek-date-month-select"
                          id="rek-date-month-select"
                          role="combobox"
                          tabindex="0"
                        >
                          Month
                        </div>
                        <input
                          aria-hidden="true"
                          aria-invalid="true"
                          class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
                          data-analyticsid="rek-date-month-input"
                          data-testid="rek-date-month-input"
                          id="rek-date-month-input"
                          label="month"
                          maxlength="2"
                          name="month"
                          placeholder="Month"
                          tabindex="-1"
                          value="-1"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-ug7h84-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
                          data-testid="ArrowDropDownIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-1ynczkt-MuiGrid-root"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                      >
                        <div
                          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
                        >
                          <input
                            aria-invalid="true"
                            class="MuiInputBase-input MuiInput-input css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                            data-analyticsid="rek-date-year-input"
                            data-testid="rek-date-year-input"
                            id="rek-date-year-input"
                            label="year"
                            maxlength="4"
                            name="year"
                            placeholder="Year"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-6 css-b2h8ea-MuiGridLegacy-root"
            >
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                data-testid="fez_record_search_key_country_of_issue.rek_country_of_issue"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  data-testid="fez_record_search_key_country_of_issue.rek_country_of_issue-label"
                  for="fez_record_search_key_country_of_issue.rek_country_of_issue-input"
                  id="fez_record_search_key_country_of_issue.rek_country_of_issue-label"
                >
                  Country of origin
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
                >
                  <input
                    aria-invalid="false"
                    aria-label="Country of origin"
                    class="MuiInputBase-input MuiInput-input css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                    data-analyticsid="fez_record_search_key_country_of_issue.rek_country_of_issue-input"
                    data-testid="fez_record_search_key_country_of_issue.rek_country_of_issue-input"
                    id="fez_record_search_key_country_of_issue.rek_country_of_issue-input"
                    label="Country of origin"
                    name="fez_record_search_key_country_of_issue.rek_country_of_issue"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-6 css-b2h8ea-MuiGridLegacy-root"
            >
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                data-testid="fez_record_search_key_publisher.rek_publisher"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  data-testid="fez_record_search_key_publisher.rek_publisher-label"
                  for="fez_record_search_key_publisher.rek_publisher-input"
                  id="fez_record_search_key_publisher.rek_publisher-label"
                >
                  Patent owner
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
                >
                  <input
                    aria-invalid="false"
                    aria-label="Patent owner"
                    class="MuiInputBase-input MuiInput-input css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                    data-analyticsid="fez_record_search_key_publisher.rek_publisher-input"
                    data-testid="fez_record_search_key_publisher.rek_publisher-input"
                    id="fez_record_search_key_publisher.rek_publisher-input"
                    label="Patent owner"
                    name="fez_record_search_key_publisher.rek_publisher"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-creators"
        id="standard-card-creators"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
              data-testid="standard-card-creators-header"
              id="standard-card-creators-header"
            >
              Creators
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
          data-analyticsid="standard-card-creators-content"
          data-testid="standard-card-creators-content"
          id="standard-card-creators-content"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-t4ynyp-MuiTypography-root"
          >
            Please provide a list of creators (e.g. producer or performer if self-produced) and then select your name from the list.
          </p>
          <div
            class="contributorEditor"
            id="authors-list-editor"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
              >
                <div>
                  <span
                    class="authorSteps"
                  >
                    Step 1 of 2
                  </span>
                   
                  - Please 
                  <b>
                    add to a list of creators below
                  </b>
                  , in the format and order that they are published.
                </div>
                <div
                  class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
                  id="contributorForm"
                  style="margin-top: 8px;"
                >
                  <div
                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-true css-40g213-MuiGridLegacy-root"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                      data-testid="authors"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary Mui-error Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
                        data-shrink="false"
                        data-testid="authors-label"
                        for="authors-input"
                        id="authors-label"
                      >
                        Creator's name as published
                        <span
                          aria-hidden="true"
                          class="MuiFormLabel-asterisk MuiInputLabel-asterisk Mui-error css-1v5bsei-MuiFormLabel-asterisk"
                        >
                           
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiInputBase-formControl Mui-readOnly MuiInputBase-readOnly css-pwuujq-MuiInputBase-root-MuiInput-root"
                      >
                        <input
                          aria-invalid="true"
                          aria-label="Creator's name as published"
                          autocomplete="off"
                          class="MuiInputBase-input MuiInput-input Mui-readOnly MuiInputBase-readOnly css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                          data-analyticsid="authors-input"
                          data-testid="authors-input"
                          id="authors-input"
                          label="Creator's name as published"
                          placeholder="Type the name exactly as published"
                          readonly=""
                          required=""
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
                  style="margin-top: 8px;"
                >
                  <div
                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-6 css-klsmha-MuiGridLegacy-root"
                    style="margin-bottom: 8px;"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth css-zwnyf7-MuiButtonBase-root-MuiButton-root"
                      data-analyticsid="authors-add"
                      data-testid="authors-add"
                      disabled=""
                      id="authors-add"
                      tabindex="-1"
                      type="button"
                    >
                      Add creator
                    </button>
                  </div>
                  <div
                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-6 css-klsmha-MuiGridLegacy-root"
                    style="margin-bottom: 8px;"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth css-zwnyf7-MuiButtonBase-root-MuiButton-root"
                      data-analyticsid="authors-cancel"
                      data-testid="authors-cancel"
                      disabled=""
                      id="authors-cancel"
                      tabindex="-1"
                      type="button"
                    >
                      Cancel
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <span
              class="MuiTypography-root MuiTypography-caption css-1nkh0cj-MuiTypography-root"
              data-testid="authors-error"
            >
              <span>
                Please 
                <b>
                  provide a list as described
                </b>
                 and 
                <b>
                  select one
                </b>
                 as you
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-other-patent-details"
        id="standard-card-other-patent-details"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
              data-testid="standard-card-other-patent-details-header"
              id="standard-card-other-patent-details-header"
            >
              Other patent details
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
          data-analyticsid="standard-card-other-patent-details-content"
          data-testid="standard-card-other-patent-details-content"
          id="standard-card-other-patent-details-content"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-2 css-z5z9i1-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
            >
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                data-testid="comments"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  data-testid="comments-label"
                  for="comments-input"
                  id="comments-label"
                >
                  Notes (not publicly viewable)
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-glkc0l-MuiInputBase-root-MuiInput-root"
                >
                  <textarea
                    aria-invalid="false"
                    aria-label="Notes (not publicly viewable)"
                    class="MuiInputBase-input MuiInput-input MuiInputBase-inputMultiline css-9j73qj-MuiInputBase-input-MuiInput-input"
                    data-analyticsid="comments-input"
                    data-testid="comments-input"
                    id="comments-input"
                    label="Notes (not publicly viewable)"
                    name="comments"
                    rows="1"
                    style="height: 0px; overflow: hidden;"
                  />
                  <textarea
                    aria-hidden="true"
                    class="MuiInputBase-input MuiInput-input MuiInputBase-inputMultiline css-9j73qj-MuiInputBase-input-MuiInput-input"
                    readonly=""
                    style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding-top: 0px; padding-bottom: 0px; width: 100%;"
                    tabindex="-1"
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
            >
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                data-testid="rek_link"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  data-testid="rek_link-label"
                  for="rek_link-input"
                  id="rek_link-label"
                >
                  Enter URL for this patent
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
                >
                  <input
                    aria-invalid="false"
                    aria-label="Enter URL for this patent"
                    class="MuiInputBase-input MuiInput-input css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                    data-analyticsid="rek_link-input"
                    data-testid="rek_link-input"
                    id="rek_link-input"
                    label="Enter URL for this patent"
                    name="rek_link"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PatentForm component with all fields disabled 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-3 css-qk4t9k-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-patent-information"
        id="standard-card-patent-information"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
              data-testid="standard-card-patent-information-header"
              id="standard-card-patent-information-header"
            >
              Patent information
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
          data-analyticsid="standard-card-patent-information-content"
          data-testid="standard-card-patent-information-content"
          id="standard-card-patent-information-content"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-2 css-z5z9i1-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
            >
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                data-testid="rek_title"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary Mui-disabled Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  data-testid="rek_title-label"
                  for="rek_title-input"
                  id="rek_title-label"
                >
                  Title of patent
                  <span
                    aria-hidden="true"
                    class="MuiFormLabel-asterisk MuiInputLabel-asterisk css-1v5bsei-MuiFormLabel-asterisk"
                  >
                     
                    *
                  </span>
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-glkc0l-MuiInputBase-root-MuiInput-root"
                >
                  <textarea
                    aria-invalid="false"
                    aria-label="Title of patent"
                    class="MuiInputBase-input MuiInput-input Mui-disabled MuiInputBase-inputMultiline css-9j73qj-MuiInputBase-input-MuiInput-input"
                    data-analyticsid="rek_title-input"
                    data-testid="rek_title-input"
                    disabled=""
                    id="rek_title-input"
                    label="Title of patent"
                    name="rek_title"
                    required=""
                    rows="3"
                    style="height: 0px; overflow: hidden;"
                  />
                  <textarea
                    aria-hidden="true"
                    class="MuiInputBase-input MuiInput-input Mui-disabled MuiInputBase-inputMultiline css-9j73qj-MuiInputBase-input-MuiInput-input"
                    readonly=""
                    style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding-top: 0px; padding-bottom: 0px; width: 100%;"
                    tabindex="-1"
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-6 css-b2h8ea-MuiGridLegacy-root"
            >
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                data-testid="fez_record_search_key_patent_number.rek_patent_number"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary Mui-disabled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  data-testid="fez_record_search_key_patent_number.rek_patent_number-label"
                  for="fez_record_search_key_patent_number.rek_patent_number-input"
                  id="fez_record_search_key_patent_number.rek_patent_number-label"
                >
                  Patent number
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
                >
                  <input
                    aria-invalid="false"
                    aria-label="Patent number"
                    class="MuiInputBase-input MuiInput-input Mui-disabled css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                    data-analyticsid="fez_record_search_key_patent_number.rek_patent_number-input"
                    data-testid="fez_record_search_key_patent_number.rek_patent_number-input"
                    disabled=""
                    id="fez_record_search_key_patent_number.rek_patent_number-input"
                    label="Patent number"
                    name="fez_record_search_key_patent_number.rek_patent_number"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-6 css-b2h8ea-MuiGridLegacy-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-jl57sx-MuiGrid-root"
                id="rek-date"
              >
                <div
                  class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
                >
                  <label
                    class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiInputLabel-shrink MuiFormLabel-colorPrimary Mui-error Mui-required MuiInputLabel-root MuiInputLabel-animated MuiInputLabel-shrink css-1x4q2ok-MuiFormLabel-root-MuiInputLabel-root"
                    data-shrink="true"
                  >
                    Date patent issued
                    <span
                      aria-hidden="true"
                      class="MuiFormLabel-asterisk MuiInputLabel-asterisk Mui-error css-1v5bsei-MuiFormLabel-asterisk"
                    >
                       
                      *
                    </span>
                  </label>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 css-yqiqnf-MuiGrid-root"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-1mkgr8u-MuiGrid-root"
                    style="margin-top: -12px;"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-1ynczkt-MuiGrid-root"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                      >
                        <div
                          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary Mui-disabled Mui-error MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
                        >
                          <input
                            aria-invalid="true"
                            class="MuiInputBase-input MuiInput-input Mui-disabled css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                            data-analyticsid="rek-date-day-input"
                            data-testid="rek-date-day-input"
                            disabled=""
                            id="rek-date-day-input"
                            label="day"
                            maxlength="2"
                            name="day"
                            placeholder="Day"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <p
                        class="MuiFormHelperText-root Mui-error css-u90aml-MuiFormHelperText-root"
                      >
                        Year required
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-1ynczkt-MuiGrid-root"
                    >
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary Mui-disabled Mui-error MuiInputBase-fullWidth MuiSelect-root css-nbo6pz-MuiInputBase-root-MuiInput-root-MuiSelect-root"
                      >
                        <div
                          aria-disabled="true"
                          aria-expanded="false"
                          aria-haspopup="listbox"
                          aria-invalid="true"
                          aria-labelledby="rek-date-month-select"
                          class="MuiSelect-select MuiSelect-standard Mui-disabled Mui-error MuiInputBase-input MuiInput-input Mui-disabled css-unhb03-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
                          data-analyticsid="rek-date-month-select"
                          data-testid="rek-date-month-select"
                          id="rek-date-month-select"
                          role="combobox"
                        >
                          Month
                        </div>
                        <input
                          aria-hidden="true"
                          aria-invalid="true"
                          class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
                          data-analyticsid="rek-date-month-input"
                          data-testid="rek-date-month-input"
                          disabled=""
                          id="rek-date-month-input"
                          label="month"
                          maxlength="2"
                          name="month"
                          placeholder="Month"
                          tabindex="-1"
                          value="-1"
                        />
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard Mui-disabled css-ug7h84-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
                          data-testid="ArrowDropDownIcon"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 10l5 5 5-5z"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-1ynczkt-MuiGrid-root"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                      >
                        <div
                          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary Mui-disabled Mui-error MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
                        >
                          <input
                            aria-invalid="true"
                            class="MuiInputBase-input MuiInput-input Mui-disabled css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                            data-analyticsid="rek-date-year-input"
                            data-testid="rek-date-year-input"
                            disabled=""
                            id="rek-date-year-input"
                            label="year"
                            maxlength="4"
                            name="year"
                            placeholder="Year"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-6 css-b2h8ea-MuiGridLegacy-root"
            >
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                data-testid="fez_record_search_key_country_of_issue.rek_country_of_issue"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary Mui-disabled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  data-testid="fez_record_search_key_country_of_issue.rek_country_of_issue-label"
                  for="fez_record_search_key_country_of_issue.rek_country_of_issue-input"
                  id="fez_record_search_key_country_of_issue.rek_country_of_issue-label"
                >
                  Country of origin
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
                >
                  <input
                    aria-invalid="false"
                    aria-label="Country of origin"
                    class="MuiInputBase-input MuiInput-input Mui-disabled css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                    data-analyticsid="fez_record_search_key_country_of_issue.rek_country_of_issue-input"
                    data-testid="fez_record_search_key_country_of_issue.rek_country_of_issue-input"
                    disabled=""
                    id="fez_record_search_key_country_of_issue.rek_country_of_issue-input"
                    label="Country of origin"
                    name="fez_record_search_key_country_of_issue.rek_country_of_issue"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-6 css-b2h8ea-MuiGridLegacy-root"
            >
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                data-testid="fez_record_search_key_publisher.rek_publisher"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary Mui-disabled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  data-testid="fez_record_search_key_publisher.rek_publisher-label"
                  for="fez_record_search_key_publisher.rek_publisher-input"
                  id="fez_record_search_key_publisher.rek_publisher-label"
                >
                  Patent owner
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
                >
                  <input
                    aria-invalid="false"
                    aria-label="Patent owner"
                    class="MuiInputBase-input MuiInput-input Mui-disabled css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                    data-analyticsid="fez_record_search_key_publisher.rek_publisher-input"
                    data-testid="fez_record_search_key_publisher.rek_publisher-input"
                    disabled=""
                    id="fez_record_search_key_publisher.rek_publisher-input"
                    label="Patent owner"
                    name="fez_record_search_key_publisher.rek_publisher"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-creators"
        id="standard-card-creators"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
              data-testid="standard-card-creators-header"
              id="standard-card-creators-header"
            >
              Creators
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
          data-analyticsid="standard-card-creators-content"
          data-testid="standard-card-creators-content"
          id="standard-card-creators-content"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-t4ynyp-MuiTypography-root"
          >
            Please provide a list of creators (e.g. producer or performer if self-produced) and then select your name from the list.
          </p>
          <div
            class="contributorEditor"
            id="authors-list-editor"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
            >
              <div
                class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
              >
                <div>
                  <span
                    class="authorSteps"
                  >
                    Step 1 of 2
                  </span>
                   
                  - Please 
                  <b>
                    add to a list of creators below
                  </b>
                  , in the format and order that they are published.
                </div>
                <div
                  class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
                  id="contributorForm"
                  style="margin-top: 8px;"
                >
                  <div
                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-true css-40g213-MuiGridLegacy-root"
                  >
                    <div
                      class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                      data-testid="authors"
                    >
                      <label
                        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary Mui-disabled Mui-error Mui-required MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
                        data-shrink="false"
                        data-testid="authors-label"
                        for="authors-input"
                        id="authors-label"
                      >
                        Creator's name as published
                        <span
                          aria-hidden="true"
                          class="MuiFormLabel-asterisk MuiInputLabel-asterisk Mui-error css-1v5bsei-MuiFormLabel-asterisk"
                        >
                           
                          *
                        </span>
                      </label>
                      <div
                        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary Mui-disabled Mui-error MuiInputBase-fullWidth MuiInputBase-formControl Mui-readOnly MuiInputBase-readOnly css-pwuujq-MuiInputBase-root-MuiInput-root"
                      >
                        <input
                          aria-invalid="true"
                          aria-label="Creator's name as published"
                          autocomplete="off"
                          class="MuiInputBase-input MuiInput-input Mui-disabled Mui-readOnly MuiInputBase-readOnly css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                          data-analyticsid="authors-input"
                          data-testid="authors-input"
                          disabled=""
                          id="authors-input"
                          label="Creator's name as published"
                          placeholder="Type the name exactly as published"
                          readonly=""
                          required=""
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-1 css-1x7evzc-MuiGridLegacy-root"
                  style="margin-top: 8px;"
                >
                  <div
                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-6 css-klsmha-MuiGridLegacy-root"
                    style="margin-bottom: 8px;"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth css-zwnyf7-MuiButtonBase-root-MuiButton-root"
                      data-analyticsid="authors-add"
                      data-testid="authors-add"
                      disabled=""
                      id="authors-add"
                      tabindex="-1"
                      type="button"
                    >
                      Add creator
                    </button>
                  </div>
                  <div
                    class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-6 css-klsmha-MuiGridLegacy-root"
                    style="margin-bottom: 8px;"
                  >
                    <button
                      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-fullWidth css-zwnyf7-MuiButtonBase-root-MuiButton-root"
                      data-analyticsid="authors-cancel"
                      data-testid="authors-cancel"
                      disabled=""
                      id="authors-cancel"
                      tabindex="-1"
                      type="button"
                    >
                      Cancel
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <span
              class="MuiTypography-root MuiTypography-caption css-1nkh0cj-MuiTypography-root"
              data-testid="authors-error"
            >
              <span>
                Please 
                <b>
                  provide a list as described
                </b>
                 and 
                <b>
                  select one
                </b>
                 as you
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root StandardCard css-f0kq9p-MuiPaper-root-MuiCard-root"
        data-testid="standard-card-other-patent-details"
        id="standard-card-other-patent-details"
        style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="MuiCardHeader-root css-rq3lln-MuiCardHeader-root"
        >
          <div
            class="MuiCardHeader-content css-1jkp9bu-MuiCardHeader-content"
          >
            <h3
              class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-w0ll6m-MuiTypography-root"
              data-testid="standard-card-other-patent-details-header"
              id="standard-card-other-patent-details-header"
            >
              Other patent details
            </h3>
          </div>
        </div>
        <div
          class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
          data-analyticsid="standard-card-other-patent-details-content"
          data-testid="standard-card-other-patent-details-content"
          id="standard-card-other-patent-details-content"
        >
          <div
            class="MuiGridLegacy-root MuiGridLegacy-container MuiGridLegacy-spacing-xs-2 css-z5z9i1-MuiGridLegacy-root"
          >
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
            >
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                data-testid="comments"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary Mui-disabled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  data-testid="comments-label"
                  for="comments-input"
                  id="comments-label"
                >
                  Notes (not publicly viewable)
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-glkc0l-MuiInputBase-root-MuiInput-root"
                >
                  <textarea
                    aria-invalid="false"
                    aria-label="Notes (not publicly viewable)"
                    class="MuiInputBase-input MuiInput-input Mui-disabled MuiInputBase-inputMultiline css-9j73qj-MuiInputBase-input-MuiInput-input"
                    data-analyticsid="comments-input"
                    data-testid="comments-input"
                    disabled=""
                    id="comments-input"
                    label="Notes (not publicly viewable)"
                    name="comments"
                    rows="1"
                    style="height: 0px; overflow: hidden;"
                  />
                  <textarea
                    aria-hidden="true"
                    class="MuiInputBase-input MuiInput-input Mui-disabled MuiInputBase-inputMultiline css-9j73qj-MuiInputBase-input-MuiInput-input"
                    readonly=""
                    style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding-top: 0px; padding-bottom: 0px; width: 100%;"
                    tabindex="-1"
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 css-fwd0zd-MuiGridLegacy-root"
            >
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-cmpglg-MuiFormControl-root-MuiTextField-root"
                data-testid="rek_link"
              >
                <label
                  class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard MuiFormLabel-colorPrimary Mui-disabled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-standard css-1hd0yqc-MuiFormLabel-root-MuiInputLabel-root"
                  data-shrink="false"
                  data-testid="rek_link-label"
                  for="rek_link-input"
                  id="rek_link-label"
                >
                  Enter URL for this patent
                </label>
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl css-pwuujq-MuiInputBase-root-MuiInput-root"
                >
                  <input
                    aria-invalid="false"
                    aria-label="Enter URL for this patent"
                    class="MuiInputBase-input MuiInput-input Mui-disabled css-1yrc8ca-MuiInputBase-input-MuiInput-input"
                    data-analyticsid="rek_link-input"
                    data-testid="rek_link-input"
                    disabled=""
                    id="rek_link-input"
                    label="Enter URL for this patent"
                    name="rek_link"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
